<resources>
    <string name="app_name">ParseVerification</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Password (repeated)</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
